force-app/main/default/objects/Contact/fields/SP_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SP_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this Contact has portal access enabled.</description>
    <label>Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>