force-app/main/default/objects/Contact/fields/SP_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>SP_Last_Login__c</fullName>
    <description>Timestamp of the most recent portal login.</description>
    <label>Portal Last Login</label>
    <type>DateTime</type>
</CustomField>