force-app/main/default/objects/Contact/fields/SP_Password_Hash__c.field-meta.xml
<CustomField>
    <fullName>SP_Password_Hash__c</fullName>
    <description>SHA-256 hashed password for portal authentication. Never stores plaintext.</description>
    <label>Portal Password Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>