force-app/main/default/objects/Contact/fields/SP_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>SP_Registration_Date__c</fullName>
    <description>When this user registered for portal access.</description>
    <label>Portal Registration Date</label>
    <type>DateTime</type>
</CustomField>