force-app/main/default/objects/Contact/fields/SP_Reset_Token__c.field-meta.xml
<CustomField>
    <fullName>SP_Reset_Token__c</fullName>
    <description>Temporary token for password reset. Cleared after use.</description>
    <label>Portal Reset Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>