force-app/main/default/objects/Contact/fields/SP_Reset_Token_Expiry__c.field-meta.xml
<CustomField>
    <fullName>SP_Reset_Token_Expiry__c</fullName>
    <description>When the password reset token expires.</description>
    <label>Portal Reset Token Expiry</label>
    <type>DateTime</type>
</CustomField>