force-app/main/default/objects/Contact/fields/SP_Role__c.field-meta.xml
<CustomField>
    <fullName>SP_Role__c</fullName>
    <description>Portal access role. Super Admin has full config access, Portal Admin manages users/branding, User has standard access.</description>
    <label>Portal Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Portal Admin</fullName>
            </value>
            <value>
                <fullName>Super Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>