force-app/main/default/objects/Contact/fields/SP_Status__c.field-meta.xml
<CustomField>
    <fullName>SP_Status__c</fullName>
    <description>Portal user account status.</description>
    <label>Portal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>