force-app/main/default/objects/Contact/fields/SP_Username__c.field-meta.xml
<CustomField>
    <fullName>SP_Username__c</fullName>
    <description>Portal login username (email address).</description>
    <externalId>true</externalId>
    <label>Portal Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>